# stm32-libopencm3-meson-blink

./: LICENSE  README.md  cross-file.txt  meson.build  stm32f103x8.ld
src/: main.c
